--- a/silly-sentences.css
+++ b/silly-sentences.css
@@ -18,7 +18,7 @@ body {
   background-color:#fff;
 }
 
-#centerContainer {
+#centerContainer2 {
   border-radius:5px;
   position:relative;
   margin:8% auto 15% auto;
@@ -54,6 +54,7 @@ input {
 	height:30px;
 	border:1px solid #00ff00;
 	border-radius:10px;
+	padding-left:2px;
 	opacity:0.7;
 }
 
@@ -154,24 +155,45 @@ label {
 	}
 }
 
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width:400px){
 	.centerContainer {
-  		border-radius:5px;
-  		position:relative;
-  		margin:8% auto auto auto;
-  		width:300px;
-  		padding:100px 70px;
-  		background-color:#fff;
-	}
-}
-
-@media only screen and (max-width: 400px) {
-	.centerContainer {
-  		border-radius:5px;
-  		position:relative;
-  		margin:8% auto auto auto;
-  		width:300px;
-  		padding:100px 50px 100px 50px;
-  		background-color:#fff;
-	}
+  	position:relative;
+  	top:40px;
+  	margin:0 auto;
+  	left:10px;
+    
+    -moz-transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
+    transform: scale(0.6);
+    
+    -o-transform-origin: 0 0;
+    -ms-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    transform-origin: 0 0;
+  }
+  #centerContainer2 {
+  	width:400px;
+  	position:relative;
+  	top:40px;
+  	margin:8% auto;
+    
+    -moz-transform: scale(0.6);
+    -ms-transform: scale(0.6);
+    -o-transform: scale(0.6);
+    -webkit-transform: scale(0.6);
+    transform: scale(0.6);
+    
+    -o-transform-origin: 0 0;
+    -ms-transform-origin: 0 0;
+    -webkit-transform-origin: 0 0;
+    -moz-transform-origin: 0 0;
+    transform-origin: 0 0;
+  }
+  form {
+  	position:relative;
+  	right:50px;
+  }
 }
